feat(arch): install stubby/dnsmasq dns proxy

--- a/setup/arch.yml
+++ b/setup/arch.yml
@@ -31,6 +31,10 @@
   roles:
     - linux/entertainment-flatpak
 
+- hosts: dnsproxy
+  roles:
+    - arch/dns-proxy
+
 - hosts: all
   vars:
     main_user: "{{ ansible_user_id }}"
