feat(arch): add base-devel and rustup to dev-cli

--- a/setup/roles/arch/dev-cli/tasks/main.yml
+++ b/setup/roles/arch/dev-cli/tasks/main.yml
@@ -2,12 +2,14 @@
   become: true
   community.general.pacman:
     name:
+      - base-devel
       - git
       - docker
       - docker-compose
       - kubectl
       - nodejs
       - npm
+      - rustup
       - go
       - man-db
 
