--- a/private_dot_config/private_Code/User/settings.json
+++ b/private_dot_config/private_Code/User/settings.json
@@ -72,5 +72,11 @@
   "editor.quickSuggestions": {
     "strings": true
   },
-  "windicss.sortOnSave": true
+  "windicss.sortOnSave": true,
+  "editor.acceptSuggestionOnCommitCharacter": false,
+  "github.copilot.enable": {
+    "*": true,
+    "plaintext": false,
+    "markdown": false
+  }
 }
