--- a/private_dot_config/private_Code/User/settings.json
+++ b/private_dot_config/private_Code/User/settings.json
@@ -45,6 +45,10 @@
     "editor.defaultFormatter": "esbenp.prettier-vscode",
     "editor.formatOnSave": true
   },
+  "[markdown]": {
+    "editor.defaultFormatter": "esbenp.prettier-vscode",
+    "editor.formatOnSave": true
+  },
   "workbench.iconTheme": "material-icon-theme",
   "workbench.colorTheme": "Dracula",
   "editor.linkedEditing": true,
