feat(wez): add wezterm
feat(wezterm): add dracula theme

--- a/.chezmoiexternal.toml
+++ b/.chezmoiexternal.toml
@@ -2,6 +2,10 @@
     type = "file"
     url = "https://raw.githubusercontent.com/dracula/gedit/master/dracula.xml"
     refreshPeriod = "168h"
+[".config/wezterm/dracula.lua"]
+    type = "file"
+    url = "https://raw.githubusercontent.com/dracula/wezterm/main/dracula.lua"
+    refreshPeriod = "168h"
 [".local/share/themes/Dracula"]
     type = "archive"
     exact = true
