--- a/.chezmoiexternal.toml
+++ b/.chezmoiexternal.toml
@@ -12,6 +12,11 @@
     url = "https://github.com/dracula/gtk/archive/master.tar.gz"
     stripComponents = 1
     refreshPeriod = "168h"
+[".config/zsh/chtfzf.zsh"]
+    type = "file"
+    url = "https://raw.githubusercontent.com/iotku/fuzzy-sheets/master/chtfzf.sh"
+    refreshPeriod = "168h"
+    executable = true
 
 [".config/nvim"]
     type = "git-repo"
