feat(code): hide menu bar

--- a/private_dot_config/private_Code/User/settings.json
+++ b/private_dot_config/private_Code/User/settings.json
@@ -82,5 +82,6 @@
     "plaintext": false,
     "markdown": false
   },
-  "window.titleBarStyle": "custom"
+  "window.titleBarStyle": "custom",
+  "window.menuBarVisibility": "compact"
 }
