feat(code): enable sticky scroll

--- a/private_dot_config/private_Code/User/settings.json
+++ b/private_dot_config/private_Code/User/settings.json
@@ -83,5 +83,6 @@
     "markdown": false
   },
   "window.titleBarStyle": "custom",
-  "window.menuBarVisibility": "compact"
+  "window.menuBarVisibility": "compact",
+  "editor.experimental.stickyScroll.enabled": true
 }
