--- a/setup/roles/arch/gui/tasks/main.yml
+++ b/setup/roles/arch/gui/tasks/main.yml
@@ -37,3 +37,9 @@
       - powerline-fonts
       - ttf-nerd-fonts-symbols-mono
     state: present
+
+- name: Setup Drop CTRL key remap (CAPSLOCK -> ESC)
+  become: true
+  ansible.builtin.template:
+    src: files/95-drop-ctrl-caps-esc-remap.hwdb
+    dest: /etc/udev/hwdb.d/95-drop-ctrl-caps-esc-remap.hwdb
