feat: add key remap for keychron

--- a/setup/roles/arch/gui/tasks/main.yml
+++ b/setup/roles/arch/gui/tasks/main.yml
@@ -49,3 +49,9 @@
   ansible.builtin.template:
     src: files/95-framework-caps-esc-remap.hwdb
     dest: /etc/udev/hwdb.d/95-framework-caps-esc-remap.hwdb
+
+- name: Setup Keychron K1 key remap (CAPSLOCK -> ESC)
+  become: true
+  ansible.builtin.template:
+    src: files/95-keychron-k1-caps-esc-remap.hwdb
+    dest: /etc/udev/hwdb.d/95-keychron-k1-caps-esc-remap.hwdb
