fix(arch): only add user to groups that exist

--- a/setup/roles/arch/dev-cli/tasks/main.yml
+++ b/setup/roles/arch/dev-cli/tasks/main.yml
@@ -115,3 +115,12 @@
     name: /opt/workspace
     state: directory
     owner: "{{ ansible_user_id }}"
+
+- name: Add user to 'docker' group
+  become: true
+  user:
+    name: "{{ main_user }}"
+    groups:
+      - docker
+    append: true
+    shell: /bin/zsh
