feat(arch): install wezterm on any gui machine

--- a/setup/roles/arch/gui/tasks/main.yml
+++ b/setup/roles/arch/gui/tasks/main.yml
@@ -3,6 +3,7 @@
   community.general.pacman:
     name:
       - flatpak
+      - wezterm
       - iio-sensor-proxy # enable automatic screen brightness
       - mesa-utils
       - pipewire
