feat(udev): add capslock remap for lenovo external keyboard

--- a/setup/roles/arch/gui/tasks/main.yml
+++ b/setup/roles/arch/gui/tasks/main.yml
@@ -56,3 +56,9 @@
   ansible.builtin.template:
     src: files/95-keychron-k1-caps-esc-remap.hwdb
     dest: /etc/udev/hwdb.d/95-keychron-k1-caps-esc-remap.hwdb
+
+- name: Setup Lenovo external keyboard key remap (CAPSLOCK -> ESC)
+  become: true
+  ansible.builtin.template:
+    src: files/95-lenovo-external-caps-esc-remap.hwdb
+    dest: /etc/udev/hwdb.d/95-lenovo-external-caps-esc-remap.hwdb
