--- a/setup/roles/arch/gui/tasks/main.yml
+++ b/setup/roles/arch/gui/tasks/main.yml
@@ -23,6 +23,14 @@
     state: present
     flatpakrepo_url: https://dl.flathub.org/repo/flathub.flatpakrepo
 
+- name: Install hardcode tray icon fixer
+  become: true
+  become_user: aur_builder
+  kewlfft.aur.aur:
+    name: hardcode-tray-git
+    use: makepkg
+    state: present
+
 - name: Install fonts
   become: true
   community.general.pacman:
