--- a/private_dot_config/private_Code/User/settings.json
+++ b/private_dot_config/private_Code/User/settings.json
@@ -88,8 +88,24 @@
   "editor.stickyScroll.enabled": true,
   "references.preferredLocation": "view",
   "terminal.integrated.env.linux": {},
-  "vim.normalModeKeyBindingsNonRecursive": [{
-    "before": ["g", "s"],
-    "commands": ["workbench.action.showAllSymbols"]
-  }]
+  "vim.normalModeKeyBindingsNonRecursive": [
+    // Search symbols
+    {
+      "before": ["g", "s"],
+      "commands": ["workbench.action.showAllSymbols"]
+    },
+    // Find references
+    {
+      "before": ["g", "r"],
+      "commands": ["editor.action.referenceSearch.trigger"]
+    },
+    // Go to type definition
+    {
+      "before": ["g", "y"],
+      "commands": ["editor.action.goToTypeDefinition"]
+    },
+  ],
+  "editor.rulers": [
+    80, 120
+  ]
 }
