feat: use monaspace font

--- a/private_dot_config/private_Code/User/settings.json
+++ b/private_dot_config/private_Code/User/settings.json
@@ -53,9 +53,9 @@
   "workbench.colorTheme": "Dracula",
   "editor.linkedEditing": true,
   "editor.wordWrap": "on",
-  "editor.fontFamily": "MonoLisa",
+  "editor.fontFamily": "Monaspace Neon",
   "editor.lineHeight": 0,
-  "editor.fontLigatures": true,
+  "editor.fontLigatures": "'calt', 'liga', 'ss01', 'ss02', 'ss03', 'ss04'",
   "editor.fontSize": 14,
   "telemetry.telemetryLevel": "off",
   "docker.showStartPage": false,
