fix(code): let vscode handle some keys rather than vim-mode

--- a/private_dot_config/private_Code/User/settings.json
+++ b/private_dot_config/private_Code/User/settings.json
@@ -93,6 +93,12 @@
   "editor.stickyScroll.enabled": true,
   "references.preferredLocation": "view",
   "terminal.integrated.env.linux": {},
+  "vim.handleKeys": {
+    "<C-d>": true,
+    "<C-s>": false,
+    "<C-z>": false,
+    "<C-p>": false
+  },
   "vim.normalModeKeyBindingsNonRecursive": [
     // Search symbols
     {
