feat(code): settings for shellformat extension

--- a/private_dot_config/private_Code/User/settings.json
+++ b/private_dot_config/private_Code/User/settings.json
@@ -116,4 +116,6 @@
       "commands": ["editor.action.goToTypeDefinition"]
     },
   ],
+  "shellformat.flag": "-i 2 -ci -bn",
+  "shellformat.useEditorConfig": true,
 }
