--- a/setup/roles/arch/gui/tasks/main.yml
+++ b/setup/roles/arch/gui/tasks/main.yml
@@ -55,6 +55,12 @@
     src: files/95-drop-ctrl-caps-esc-remap.hwdb
     dest: /etc/udev/hwdb.d/95-drop-ctrl-caps-esc-remap.hwdb
 
+- name: Setup Drop CTRL v2 key remap (CAPSLOCK -> ESC)
+  become: true
+  ansible.builtin.template:
+    src: files/95-drop-ctrl-v2-caps-esc-remap.hwdb
+    dest: /etc/udev/hwdb.d/95-drop-ctrl-v2-caps-esc-remap.hwdb
+
 - name: Setup Framework laptop key remap (CAPSLOCK -> ESC)
   become: true
   ansible.builtin.template:
