--- a/.chezmoiexternal.toml
+++ b/.chezmoiexternal.toml
@@ -10,17 +10,16 @@
     type = "file"
     url = "https://raw.githubusercontent.com/dracula/zellij/master/dracula.kdl"
     refreshPeriod = "168h"
-[".local/share/themes/Dracula"]
-    type = "archive"
-    exact = true
-    url = "https://github.com/dracula/gtk/archive/master.tar.gz"
-    stripComponents = 1
-    refreshPeriod = "168h"
 [".config/zsh/chtfzf.zsh"]
     type = "file"
     url = "https://raw.githubusercontent.com/iotku/fuzzy-sheets/master/chtfzf.sh"
     refreshPeriod = "168h"
     executable = true
+
+[".local/share/themes/Dracula"]
+    type = "git-repo"
+    url = "https://github.com/dracula/gtk.git"
+    refreshPeriod = "168h"
 
 [".vim/pack/themes/start/dracula"]
     type = "git-repo"
